--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="container">
-          <h1 class="logo">ENTREGA FLEX</h1>
+          <h1 class="logo">ENTREGA FLEX></h1>
           <nav class="nav">
             <ul class="nav-list">
               <li><a href="#">Home</a></li>
@@ -17,7 +17,7 @@
               <li><a href="#">Services</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
-            <button class="cta-button">Get Started</button>
+            <button class="cta-button">CONTACTO</button>
           </nav>
         </div>
       </header>
@@ -62,9 +62,19 @@
       </section>
 
       <footer class="footer">
-        <div class="container">
-          <p>&copy; 2025 Flex Agency. All rights reserved.</p>
-        </div>
+      <ul>
+        <li>CONTACTO</li>
+        <li>nostros</li>
+        <li>Asociados</li>
+      </ul>
+      <ul>
+        <li>CONTACTO</li>
+        <li>nostros</li>
+        <li>Asociados</li>
+      </ul>
+
+
+
       </footer>
 </body>
 </html>
