--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="container">
-          <h1 class="logo">ENTREGA FLEX></h1>
+          <h1 class="logo">ENTREGA FLEX</h1>
           <nav class="nav">
             <ul class="nav-list">
               <li><a href="#">Home</a></li>
@@ -61,20 +61,33 @@
         </div>
       </section>
 
-      <footer class="footer">
-      <ul>
-        <li>CONTACTO</li>
-        <li>nostros</li>
-        <li>Asociados</li>
-      </ul>
-      <ul>
-        <li>CONTACTO</li>
-        <li>nostros</li>
-        <li>Asociados</li>
-      </ul>
-
-
-
-      </footer>
+      <footer class="site-footer">
+        <div class="container footer-grid">
+            <div class="footer-section">
+                <h4>Contacto</h4>
+                <ul>
+                    <li>Email: info@entregaflex.com</li>
+                    <li>Teléfono: +34 123 456 789</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Nosotros</h4>
+                <ul>
+                    <li><a href="#">Quiénes Somos</a></li>
+                    <li><a href="#">Equipo</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Enlaces</h4>
+                <ul>
+                    <li><a href="#">Asociados</a></li>
+                    <li><a href="#">Términos y Condiciones</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Entrega Flex. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
