--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </ul>
         <button class="btn-primary">Contáctanos</button>
     </nav>
+    <img src="./assets/menu.png" alt="menu" class="menu">
 </header>
 <main>
         <div class="container hero-container">
